--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <h2>Marcela Villanueva</h2>
         <p>I'm a <span class="typed" data-typed-items="Communications student, Freelance creative">...</span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-          <a href="#">
+          <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/marcela-villanueva-valega-998957261/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.behance.net/marcela_villanueva">
             <img src="assets/img/behance.svg" alt="Behance">
           </a>
         </div>
