--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
           <a href="https://www.linkedin.com/in/marcela-villanueva-valega-998957261/"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.behance.net/marcela_villanueva">
-            <img src="assets/img/behance.svg" alt="Behance">
+            <img src="assets/img/behance.svg" alt="Behance" width="4px" height="4px">
           </a>
         </div>
       </div>
