--- a/index.html
+++ b/index.html
@@ -91,15 +91,13 @@
       <h3 class="sitename">Personal</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/marcela-villanueva-valega-998957261/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/marcela_villanueva"><i class="fab fa-behance"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Personal</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">My website</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
