--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Personal</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>This is my personal website. Here you can find all about my experience, skills and projects.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/marcela-villanueva-valega-998957261/"><i class="bi bi-linkedin"></i></a>
