--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Personal</h3>
+      <h3 class="sitename">My website</h3>
       <p>This is my personal website. Here you can find all about my experience, skills and projects.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
