--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Marcela Villanueva</h2>
-        <p>I'm a <span class="typed" data-typed-items="Communications student, Freelance creative">...</span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Advertising student, Freelance creative">...</span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://www.instagram.com/marcelavilla.aa/"><i class="bi bi-instagram"></i></a>
           <a href="https://www.linkedin.com/in/marcela-villanueva-valega-998957261/"><i class="bi bi-linkedin"></i></a>
