--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About me</h1>
-              <p class="mb-0">"I’m a Marketing and Advertising student with a strong interest in branding and digital marketing. I have experience in graphic design and content creation, and I’m passionate about using creativity to build memorable brands. I strongly believe that a well-defined strategy is essential for working efficiently and effectively, achieving results through proactivity, and responsibility.</p>
+              <p class="mb-0">"I’m an Advertising student with a strong interest in branding and digital marketing. I have experience in graphic design and content creation, and I’m passionate about using creativity to build memorable brands. I strongly believe that a well-defined strategy is essential for working efficiently and effectively, achieving results through proactivity, and responsibility.</p>
             </div>
           </div>
         </div>
@@ -101,8 +101,7 @@
           <div class="col-lg-8 content">
             <h2>Advertising student & Freelance creative</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Advertising student in the 8th semester at Pontificia Universidad Católica del Perú. Graphic designer and content creator for brands as a freelancer.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -195,6 +194,7 @@
     </section><!-- /Skills Section -->
 
 
+    
 
   </main>
 
