--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About me</h1>
-              <p class="mb-0">I’m an Advertising student with a strong interest in branding and digital marketing. I have experience in graphic design and content creation, and I’m passionate about using creativity to build memorable brands. I strongly believe that a well-defined strategy is essential for working efficiently and effectively, achieving results through proactivity, and responsibility.</p>
+              <p class="mb-0">I’m an Advertising student with a strong interest in branding and digital marketing. I have experience in graphic design and content creation, and I’m passionate about using creativity to build memorable brands. I strongly believe that a well-defined strategy is essential for working efficiently and effectively, achieving results through proactivity and responsibility.</p>
             </div>
           </div>
         </div>
