--- a/resume.html
+++ b/resume.html
@@ -99,14 +99,13 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
 
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
+            <div class="resume-item">
+              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h5>March 2021 - Present</h5>
+              <p><em>Pontificia Universidad Católica del Perú</em></p>
+              <p>8th semester – Currently in the top fifth of the class
+                 I have developed theoretical knowledge in creativity and advertising copywriting, graphic design, marketing, and advertising media. Additionally, I have worked on several outstanding projects in the festival organized by my department each semester. These projects have allowed me to apply my skills in real-world scenarios, strengthening my ability to develop strategic and creative solutions.
+              </p>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Extracurricular Activities</h3>
