--- a/resume.html
+++ b/resume.html
@@ -100,12 +100,10 @@
             <h3 class="resume-title">Education</h3>
 
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h4>Bachelor's degree in Advertising</h4>
               <h5>March 2021 - Present</h5>
               <p><em>Pontificia Universidad Católica del Perú</em></p>
-              <p>8th semester – Currently in the top fifth of the class
-                 I have developed theoretical knowledge in creativity and advertising copywriting, graphic design, marketing, and advertising media. Additionally, I have worked on several outstanding projects in the festival organized by my department each semester. These projects have allowed me to apply my skills in real-world scenarios, strengthening my ability to develop strategic and creative solutions.
-              </p>
+              <p>I have developed theoretical knowledge in creativity and advertising copywriting, graphic design, marketing, and advertising media. Additionally, I have worked on several outstanding projects in the festival organized by my department each semester.</p>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Extracurricular Activities</h3>
