--- a/resume.html
+++ b/resume.html
@@ -150,11 +150,29 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
+              <h4>Executive Assistant to the CEO</h4>
+              <h5>May 2023 – October 2023</h5>
+              <p><em>Educ4tech</em></p>
+              <ul>
+                <li>Supervised and led the Operations Department</li>
+                <li>Reviewed corporate emails</li>
+                <li>Responded to and addressed inquiries via email</li>
+                <li>Managed and executed the student enrollment process</li>
+                <li>Issued certifications for students upon course completion and approval</li>
+                <li>Administered and updated the student payment database</li>
+                <li>Continuously monitored the virtual campus</li>
+                <li>Created Course Kits for each course (logo, presentation, syllabus, certificate, transcript, web cover, and promotional video)</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+              </ul>
+            </div><!-- Edn Resume Item -->
+            
+            <div class="resume-item">
               <h4>Graphic Designer</h4>
               <h5>November 2023 – March 2024</h5>
               <p><em>Educ4tech</em></p>
               <ul>
-                <li>Created Course Kits for each course (logo, presentation, syllabus, certificate, transcript, web cover, and promotional video)<li>
+                <li>Created Course Kits for each course (logo, presentation, syllabus, certificate, transcript, web cover, and promotional video)</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
