--- a/services.html
+++ b/services.html
@@ -149,13 +149,10 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-chat-square-text"></i>
+                <i class="bi bi-phyton"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Dolori Architecto</h3>
-              </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+                <h3>Data Analysis & Optimization</h3>
+              <p>I use tools like Python to extract, process, and analyze data, improving digital strategies based on real, measurable insights.</p>
             </div>
           </div><!-- End Service Item -->
 
