--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="bi bi-design"></i>
+                <i class="bi bi-palette"></i>
               </div>
                 <h3>Branding & Graphic Design</h3>
               <p>I develop brand identities and brand manuals that truly capture each business’s essence. I design visual materials for both print and digital platforms, ensuring consistency and professionalism.</p>
@@ -109,7 +109,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-social-media"></i>
+                <i class="bi bi-people"></i>
               </div>
                 <h3>Social Media Management & Community Engagement</h3>
               <p>I plan, create, and manage social media content, engaging with the community and monitoring results. I ensure a strong and aligned brand presence across platforms.</p>
@@ -119,7 +119,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-advertising"></i>
+                <i class="bi bi-megaphone"></i>
               </div>
                 <h3>Digital Advertising & Campaigns</h3>
               <p>I design and execute digital marketing strategies to enhance brand reach and conversion on social media and other digital platforms.</p>
@@ -129,7 +129,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-video"></i>
+                <i class="bi bi-camera-reels"></i>
               </div>
                 <h3>Video Editing</h3>
               <p>I create and edit engaging video content for social media, advertising, and brand storytelling.</p>
@@ -139,7 +139,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-html"></i>
+                <i class="bi bi-code-slash"></i>
               </div>
                 <h3>Web Development & HTML Programming</h3>
               <p>I design and optimize website structures using HTML, ensuring functionality and an optimal user experience.</p>
@@ -149,7 +149,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-phyton"></i>
+                <i class="bi bi-chart-line"></i>
               </div>
                 <h3>Data Analysis & Optimization</h3>
               <p>I use tools like Python to extract, process, and analyze data, improving digital strategies based on real, measurable insights.</p>
