--- a/services.html
+++ b/services.html
@@ -149,7 +149,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-chart-line"></i>
+                <i class="bi bi-bar-chart"></i>
               </div>
                 <h3>Data Analysis & Optimization</h3>
               <p>I use tools like Python to extract, process, and analyze data, improving digital strategies based on real, measurable insights.</p>
