--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Graphic Design</h4>
-                  <p>"Buscando el equilibrio" - Creative typography inspired by euphoria</p>
+                  <p>"Buscando el equilibrio" – Creative typography inspired by euphoria</p>
                   <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -139,7 +139,7 @@
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Content Creation</h4>
-                  <p>Cataleya The Brand - Social Media Content Strategy</p>
+                  <p>Cataleya The Brand – Social Media Content Strategy</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -163,7 +163,7 @@
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Digital Marketing</h4>
-                  <p>H&M Navidad- Digital Strategy for Holiday Campaign</p>
+                  <p>H&M Navidad – Digital Strategy for Holiday Campaign</p>
                   <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
