--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
                   <h4>Digital Marketing</h4>
                   <p>H&M Navidad – Digital Strategy for Holiday Campaign</p>
                   <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://www.canva.com/design/DAGXT7ZqSBA/ixl4qD6TlZU5-IdT19tt-Q/view?utm_content=DAGXT7ZqSBA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h783c9c92e9"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://www.canva.com/design/DAGXT7ZqSBA/ixl4qD6TlZU5-IdT19tt-Q/view?utm_content=DAGXT7ZqSBA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h783c9c92e9"><i class="bi bi-link-45deg" title="More Details" class="details-link"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
