--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                   <h4>Graphic Design</h4>
                   <p>"Buscando el equilibrio" – Creative typography inspired by euphoria</p>
                   <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://drive.google.com/file/d/1kdwM0nUf6Dg86JcdkmBlQSXp-NUR4wtc/view?usp=sharing" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -117,7 +117,7 @@
                   <h4>Photography, Writting & Editorial Design</h4>
                   <p>Fashion Editorial for Somos Magazine – Bolivar x Pionier Campaign</p>
                   <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://drive.google.com/file/d/1x0wM9xMYm8J0bLkEi1wK2e2zmJcjDxFa/view?usp=sharing" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -129,7 +129,7 @@
                   <h4>Data Analysis with Python</h4>
                   <p>#CancelBalenciaga: Sentiment Analysis on Twitter</p>
                   <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://github.com/marcela-vv/-CancelBalenciaga.git" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -141,7 +141,7 @@
                   <h4>Content Creation</h4>
                   <p>Cataleya The Brand – Social Media Content Strategy</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://www.canva.com/design/DAGJR8IM6yc/-TOu8aWMCmDYP08VEXo8iw/view?utm_content=DAGJR8IM6yc&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h91e3cf7fce" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -153,7 +153,7 @@
                   <h4>Video Editing & Animation</h4>
                   <p>"Building a Brighter Future" – Animated Video Essay on Food Waste</p>
                   <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://drive.google.com/file/d/1e6r66I9mMBcCvTcEbb0lt6qB0B26fDvL/view?usp=sharing" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
