--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Graphic Design</h4>
                   <p>"Buscando el equilibrio" – Creative typography inspired by euphoria</p>
@@ -112,7 +112,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Photography, Writting & Editorial Design</h4>
                   <p>Fashion Editorial for Somos Magazine – Bolivar x Pionier Campaign</p>
@@ -124,7 +124,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Data Analysis with Python</h4>
                   <p>#CancelBalenciaga: Sentiment Analysis on Twitter</p>
@@ -136,7 +136,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Content Creation</h4>
                   <p>Cataleya The Brand – Social Media Content Strategy</p>
@@ -148,7 +148,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Video Editing & Animation</h4>
                   <p>"Building a Brighter Future" – Animated Video Essay on Food Waste</p>
@@ -160,7 +160,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/6.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Digital Marketing</h4>
                   <p>H&M Navidad – Digital Strategy for Holiday Campaign</p>
